load previous review (issue #235)

--- a/templates/account/dashboard_purchase_list.html
+++ b/templates/account/dashboard_purchase_list.html
@@ -74,6 +74,15 @@
                     }
                 });
             });
+
+            // 기존 rating에 따라 별점 넣기
+            $('.status_4_menu').on('click', function () {
+                {% for order_item in order_items_finished %}
+                    {% with reviews|get_dict_value:order_item.id as each_review %}
+                        $("input:radio[class='id_{{ order_item.id }}_rating']:radio[value='{{ each_review.rating }}']").attr('checked', true);
+                    {% endwith %}
+                {% endfor %}
+            });
         });
 
     </script>
@@ -889,25 +898,25 @@
                                                 </div>
                                                 <div class="review_form_content_input">
                                                     <fieldset class="rating">
-                                                        <input type="radio" id="id_{{ order_item.id }}_rating_10" name="rating" value="5" />
+                                                        <input type="radio" id="id_{{ order_item.id }}_rating_10" name="rating" class="id_{{ order_item.id }}_rating" value="5.00" />
                                                         <label class = "full" for="id_{{ order_item.id }}_rating_10" title="Awesome - 5 stars"></label>
-                                                        <input type="radio" id="id_{{ order_item.id }}_rating_9" name="rating" value="4.5" />
+                                                        <input type="radio" id="id_{{ order_item.id }}_rating_9" name="rating" class="id_{{ order_item.id }}_rating" value="4.50" />
                                                         <label class="half" for="id_{{ order_item.id }}_rating_9" title="Pretty good - 4.5 stars"></label>
-                                                        <input type="radio" id="id_{{ order_item.id }}_rating_8" name="rating" value="4" />
+                                                        <input type="radio" id="id_{{ order_item.id }}_rating_8" name="rating" class="id_{{ order_item.id }}_rating" value="4.00" />
                                                         <label class = "full" for="id_{{ order_item.id }}_rating_8" title="Pretty good - 4 stars"></label>
-                                                        <input type="radio" id="id_{{ order_item.id }}_rating_7" name="rating" value="3.5" />
+                                                        <input type="radio" id="id_{{ order_item.id }}_rating_7" name="rating" class="id_{{ order_item.id }}_rating" value="3.50" />
                                                         <label class="half" for="id_{{ order_item.id }}_rating_7" title="Meh - 3.5 stars"></label>
-                                                        <input type="radio" id="id_{{ order_item.id }}_rating_6" name="rating" value="3" />
+                                                        <input type="radio" id="id_{{ order_item.id }}_rating_6" name="rating" class="id_{{ order_item.id }}_rating" value="3.00" />
                                                         <label class = "full" for="id_{{ order_item.id }}_rating_6" title="Meh - 3 stars"></label>
-                                                        <input type="radio" id="id_{{ order_item.id }}_rating_5" name="rating" value="2.5" />
+                                                        <input type="radio" id="id_{{ order_item.id }}_rating_5" name="rating" class="id_{{ order_item.id }}_rating" value="2.50" />
                                                         <label class="half" for="id_{{ order_item.id }}_rating_5" title="Kinda bad - 2.5 stars"></label>
-                                                        <input type="radio" id="id_{{ order_item.id }}_rating_4" name="rating" value="2" />
+                                                        <input type="radio" id="id_{{ order_item.id }}_rating_4" name="rating" class="id_{{ order_item.id }}_rating" value="2.00" />
                                                         <label class = "full" for="id_{{ order_item.id }}_rating_4" title="Kinda bad - 2 stars"></label>
-                                                        <input type="radio" id="id_{{ order_item.id }}_rating_3" name="rating" value="1.5" />
+                                                        <input type="radio" id="id_{{ order_item.id }}_rating_3" name="rating" class="id_{{ order_item.id }}_rating" value="1.50" />
                                                         <label class="half" for="id_{{ order_item.id }}_rating_3" title="Meh - 1.5 stars"></label>
-                                                        <input type="radio" id="id_{{ order_item.id }}_rating_2" name="rating" value="1" />
+                                                        <input type="radio" id="id_{{ order_item.id }}_rating_2" name="rating" class="id_{{ order_item.id }}_rating" value="1.00" />
                                                         <label class = "full" for="id_{{ order_item.id }}_rating_2" title="Sucks big time - 1 star"></label>
-                                                        <input type="radio" id="id_{{ order_item.id }}_rating_1" name="rating" value="0.5" />
+                                                        <input type="radio" id="id_{{ order_item.id }}_rating_1" name="rating" class="id_{{ order_item.id }}_rating" value="0.50" />
                                                         <label class="half" for="id_{{ order_item.id }}_rating_1" title="Sucks big time - 0.5 stars"></label>
                                                     </fieldset>
                                                     <div class="rating_notice">별을 클릭하여 서비스 만족도를 알려주세요.</div>
