--- a/static/css/home.css
+++ b/static/css/home.css
@@ -538,7 +538,7 @@
 }
 
 .circle-wrapper{
-	width:300px;
+	width:100%;
 	height:150px;
     margin-top:15px;
     margin-left:5px;
@@ -606,7 +606,7 @@
   padding: 0;
   /*margin: 1em auto;*/
   /*margin: 1em 1em 0 3em;*/
-	margin-left:5%;
+	margin-left:8%;
   width: 150px;
   height: 75px;
   border-radius: 150px 150px 0 0;
