--- a/templates/account/dashboard_purchase_list.html
+++ b/templates/account/dashboard_purchase_list.html
@@ -894,7 +894,8 @@
                                             </div>
                                             <div class="review_form_content rating">
                                                 <div class="review_form_content_title">
-                                                    만족도 평가
+                                                    만족도 평가<br>
+                                                    <span style="color:#648efc;">(필수)</span>
                                                 </div>
                                                 <div class="review_form_content_input">
                                                     <fieldset class="rating">
@@ -924,7 +925,8 @@
                                             </div>
                                             <div class="review_form_content satisfy" style="clear:both;">
                                                 <div class="review_form_content_title">
-                                                    세부 평가
+                                                    세부 평가<br>
+                                                    (선택)
                                                 </div>
                                                 <div class="review_form_content_input">
                                                     <span class="satisfy_title_each">콘텐츠</span>{{ each_review_form.contents_satisfy }}<br>
@@ -935,7 +937,8 @@
 
                                             <div class="review_form_content review" style="clear:both;">
                                                 <div class="review_form_content_title">
-                                                    한줄 리뷰
+                                                    한줄 리뷰<br>
+                                                    <span style="color:#648efc;">(필수)</span>
                                                 </div>
                                                 <div class="review_form_content_input">
                                                     {{ each_review_form.review }}
