--- a/static/css/dashboard/purchase_list.css
+++ b/static/css/dashboard/purchase_list.css
@@ -720,11 +720,11 @@ li:nth-child(5) .circle-text {
     display: none;
     float:left;
     position:absolute;
-    left:36%;
+    left:38%;
     top:15%;
     background: white;
     border: 1px solid black;
-    width:34%;
+    width:30%;
     height:550px;
     text-align:center;
     z-index:10;
@@ -745,12 +745,12 @@ li:nth-child(5) .circle-text {
 }
 
 .review_modal .review_form_notice {
-    width:90%;
+    width:88%;
     background-color: #e8e8e8;
     text-align:left;
-    height:5%;
     margin-top:3%;
     margin-left:5%;
+    padding: 5px;
 }
 
 .review_modal .review_form_notice span{
@@ -762,7 +762,8 @@ li:nth-child(5) .circle-text {
     width:90%;
     margin-left:5%;
     border-bottom:1px solid black;
-    margin-top:2%;
+    padding-top: 20px;
+    padding-bottom: 20px;
     font-size: 14px;
 }
 
@@ -770,7 +771,8 @@ li:nth-child(5) .circle-text {
 .review_form .review_form_content .review_form_content_title {
     width:29%;
     display: inline-block;
-    margin-top:2%;
+    /*margin-top:2%;*/
+    vertical-align: middle;
 }
 
 .review_form .review_form_content .review_form_content_input {
@@ -782,11 +784,11 @@ li:nth-child(5) .circle-text {
 }
 
 .review_form .review_form_content.product{
-    height:11%;
+    /*height:11%;*/
 }
 
 .review_form .review_form_content.product .review_form_content_title{
-    margin-top:3%;
+    /*margin-top:3%;*/
 }
 
 .review_form .review_form_content.product .review_product_title{
@@ -806,11 +808,11 @@ li:nth-child(5) .circle-text {
 }
 
 .review_form .review_form_content.rating{
-    height:16%;
+    /*height:16%;*/
 }
 
 .review_form .review_form_content.rating .review_form_content_title{
-    margin-top:6%;
+    /*margin-top:6%;*/
 }
 
 .review_form .review_form_content.rating .rating_notice {
@@ -820,15 +822,16 @@ li:nth-child(5) .circle-text {
 }
 
 .review_form .review_form_content.satisfy{
-    height:20%;
+    /*height:20%;*/
 }
 
 .review_form .review_form_content.satisfy .review_form_content_title{
-    margin-top:10%;
+    /*margin-top:10%;*/
 }
 
 .review_form .review_form_content.satisfy li{
-    float:left
+    float:left;
+    margin-right: 20px;
 }
 
 .review_form .review_form_content.satisfy .satisfy_title_each {
@@ -839,7 +842,7 @@ li:nth-child(5) .circle-text {
 }
 
 .review_form .review_form_content.review{
-    height:17%;
+    /*height:17%;*/
     border-bottom: none;
 }
 
@@ -910,8 +913,9 @@ fieldset, label { margin: 0; padding: 0; }
 /****** Style Star Rating Widget *****/
 
 .rating {
-  border: none;
-  float: left;
+    border: none;
+    /*float: left;*/
+    display: inherit;
 }
 
 .rating > input { display: none; }
