--- a/templates/account/dashboard_purchase_list.html
+++ b/templates/account/dashboard_purchase_list.html
@@ -10,6 +10,11 @@
     <script type="text/javascript" src="{% static 'js/dashboard/list.js' %}"></script>
     <script type="text/javascript">
         $(function () {
+             /* 리뷰 필수 정보 미입력시 에러 메세지 날려주기 */
+            {% if error_message %}
+             alert("{{ error_message }}");
+            {% endif %}
+
             $('.detail_bottom_btn-talk').on('click', function () {
                 startMessage('{{ user.id }}', $(this).data('id'), $(this).data('name'), $(this).data('profile'));
             });
@@ -84,6 +89,8 @@
                         // 별점 옆의 숫자 설정
                         span = document.getElementById("rating_number_id_{{ order_item.id }}");
                         value = parseFloat($("input:radio[class='id_{{ order_item.id }}_rating']:checked").val()).toFixed(1);
+                        if (isNaN(value))
+                            value = "0.0";
                         span.innerHTML = String(value) + "/5";
                     {% endwith %}
                 {% endfor %}
