--- a/static/css/header.css
+++ b/static/css/header.css
@@ -328,3 +328,43 @@ _:-ms-lang(x), #header_tnb > a#login{
 _:-ms-lang(x), .dropdown-selected {
     top: -9px;
 }
+
+.notification_popup_wrapper{
+    display: none;
+    position:absolute;
+    top:65px;
+    right:10%;
+    background-color: #f2f2f2;
+    width:25%;
+    height:400px;
+    border:1px solid #f1f1f1;
+}
+
+.notification_popup_wrapper .notification_popup_title{
+    width:100%;
+    height:6%;
+    padding-top:2%;
+    text-align: center;
+}
+
+.notification_popup_wrapper .notification_popup_content {
+    width:100%;
+    background-color: white;
+    height:92%;
+    overflow-y: scroll;
+}
+
+.notification_popup_wrapper .notification_popup_content .notification_each_wrapper{
+    width:100%;
+}
+
+.notification_popup_content .notification_each_wrapper .notification_each:nth-child(1){
+    margin-top:20px;
+}
+
+.notification_popup_content .notification_each_wrapper .notification_each{
+    width:90%;
+    margin-left: 5%;
+    margin-top:10px;
+    margin-bottom: 10px;
+}
